--- a/locale/pt_BR/LC_MESSAGES/messages.po
+++ b/locale/pt_BR/LC_MESSAGES/messages.po
@@ -5,16 +5,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: marketplace-webpay\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-22 09:18-0700\n"
-"PO-Revision-Date: 2013-07-19 12:28-0300\n"
-"Last-Translator: Fernando Pereira Silveira <fernandopsilveira@yahoo.com.br>\n"
+"POT-Creation-Date: 2014-05-07 09:18-0700\n"
+"PO-Revision-Date: 2014-05-14 11:46+0000\n"
+"Last-Translator: Marco Aurélio <ouesten@me.com>\n"
 "Language-Team: Português (Brasil) <dev-l10n-pt-br@lists.mozilla.org>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Gtranslator 2.91.6\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1400067987.0\n"
 
 #: webpay/bango/templates/bango/cancel.html:10 webpay/base/templates/base.html:35
 msgid "Payment cancelled."
@@ -24,153 +25,157 @@ msgstr "Pagamento cancelado."
 msgid "Your payment is complete."
 msgstr "Seu pagamento foi concluído."
 
-#: webpay/base/dev_messages.py:89
+#: webpay/base/dev_messages.py:90
 msgid "Mozilla received an invalid code from the payment provider (Bango) when processing the payment"
-msgstr ""
+msgstr "Mozilla recebeu um código inválido do provedor de pagamento (Bango) enquanto processava o pagamento"
 
 #. L10n: First argument is an example of the proper key format.
-#: webpay/base/dev_messages.py:93
+#: webpay/base/dev_messages.py:94
 msgid "An image icon key was not an object. Correct example: {0}"
 msgstr "Essa imagem não é um objeto. Exemplo correto: {0}"
 
 #. L10n: JWT stands for JSON Web Token and does not need to be
 #. localized.
-#: webpay/base/dev_messages.py:97
+#: webpay/base/dev_messages.py:98
 msgid "No one has been registered for this JWT issuer."
 msgstr "Não há ninguém registrado como emissor deste JWT."
 
-#: webpay/base/dev_messages.py:98
-msgid "The price point is unknown or invalid."
-msgstr ""
-
 #: webpay/base/dev_messages.py:99
-msgid "The request to begin payment was invalid."
-msgstr ""
+msgid "The price point is unknown or invalid."
+msgstr "A faixa de preço é desconhecida ou inválida."
 
-#: webpay/base/dev_messages.py:101
+#: webpay/base/dev_messages.py:100
+msgid "The request to begin payment was invalid."
+msgstr "O pedido para iniciar o pagamento era inválido."
+
+#: webpay/base/dev_messages.py:102
 msgid "The requested payment simulation result is not supported."
 msgstr "O resultado desta simulação de pagamento não pode ser exibido."
 
-#: webpay/base/dev_messages.py:103
+#: webpay/base/dev_messages.py:104
 msgid "The payment provider (Bango) returned an error while processing the payment"
-msgstr ""
+msgstr "O provedor de pagamentos (Bango) retornou um erro enquanto o pagamento era processado"
 
 #. L10n: JWT stands for JSON Web Token and does not need to be
 #. localized.
-#: webpay/base/dev_messages.py:107
+#: webpay/base/dev_messages.py:108
 msgid "The JWT has expired."
 msgstr "O JWT expirou."
 
-#: webpay/base/dev_messages.py:109
+#: webpay/base/dev_messages.py:110
 msgid "The external payment processor returned an error while handling the payment"
-msgstr ""
+msgstr "O processador de pagamento externo retornou um erro ao manusear o pagamento"
 
-#: webpay/base/dev_messages.py:111
+#: webpay/base/dev_messages.py:112
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "Um pedido web interno expirou."
 
 #. L10n: JWT stands for JSON Web Token and does not need to be
 #. localized.
-#: webpay/base/dev_messages.py:115
+#: webpay/base/dev_messages.py:116
 msgid "The JWT signature is invalid or the JWT is malformed."
 msgstr "A assinatura deste JWT está inválida ou o JWT está com problemas."
 
 #. L10n: JWT stands for JSON Web Token and does not need to be
 #. localized.
-#: webpay/base/dev_messages.py:118
+#: webpay/base/dev_messages.py:119
 msgid "The JWT did not decode to a JSON object."
 msgstr "O JWT não funcionou como um objeto JSON."
 
 #. L10n: JWT stands for JSON Web Token and does not need to be
 #. localized.
-#: webpay/base/dev_messages.py:121
+#: webpay/base/dev_messages.py:122
 msgid "Error decoding JWT."
 msgstr "Erro ao decodificar o JWT."
 
-#: webpay/base/dev_messages.py:122
-msgid "The system timed out while trying to log in."
-msgstr ""
-
 #: webpay/base/dev_messages.py:123
+msgid "The system timed out while trying to log in."
+msgstr "O sistema esgotou o tempo limite ao tentar entrar"
+
+#: webpay/base/dev_messages.py:124
 msgid "The system timed out while trying to log out."
-msgstr ""
+msgstr "O sistema esgotou o tempo limite ao tentar sair"
 
 #. L10n: 'postback' is a term that means a URL accepting HTTP posts.
-#: webpay/base/dev_messages.py:125
+#: webpay/base/dev_messages.py:126
 msgid "A URL is malformed. This could be a postback URL or an icon URL."
 msgstr "Uma URL está inválida. Pode ser a URL de postback ou do ícone."
 
-#: webpay/base/dev_messages.py:127
+#: webpay/base/dev_messages.py:128
 msgid "The transaction ID was missing from the session when processing a payment return."
-msgstr ""
+msgstr "O ID da transação estava ausente na sessão durante o processamento de um retorno de pagamento."
 
 #. L10n: First and second arguements are the names of keys.
-#: webpay/base/dev_messages.py:131
+#: webpay/base/dev_messages.py:132
 msgid "If {0} is defined, then you must also define {1}."
 msgstr "Se {0} estiver definido, então você precisa definir {1} também."
 
 #. L10n: First argument is the name of the key, 'reason'.
-#: webpay/base/dev_messages.py:135
+#: webpay/base/dev_messages.py:136
 msgid "The requested chargeback simulation is missing the key '{0}'."
 msgstr "A simulação de cancelamento solicitada está incompleta; a chave \"{0}\" está faltando."
 
-#: webpay/base/dev_messages.py:137
+#: webpay/base/dev_messages.py:138
 msgid "The notification service responded with an error while verifying the payment notice"
-msgstr ""
+msgstr "O serviço de notificação respondeu com um erro enquanto verificava o aviso de pagamento"
 
-#: webpay/base/dev_messages.py:139
+#: webpay/base/dev_messages.py:140
 msgid "The notification service raised an unexpected exception while verifying the payment notice"
-msgstr ""
+msgstr "O serviço de notificação levantou uma exceção inesperada ao verificar o aviso de pagamento"
 
-#: webpay/base/dev_messages.py:142
-msgid "Payments are temporarily disabled"
-msgstr ""
+#: webpay/base/dev_messages.py:143 webpay/pay/views.py:54
+msgid "Payments are temporarily disabled."
+msgstr "Os pagamentos foram desativados temporariamente."
 
-#: webpay/base/dev_messages.py:144
+#: webpay/base/dev_messages.py:145
 msgid "The resource has been modified within the timing of the previous request. The action should be performed again."
-msgstr ""
+msgstr "O recurso foi modificado no momento da solicitação anterior. A ação deve ser realizada novamente."
 
-#: webpay/base/dev_messages.py:146
+#: webpay/base/dev_messages.py:147
 msgid "Payment simulations are disabled at this time."
 msgstr "Simulações de pagamentos estão desativadas no momento."
 
-#: webpay/base/dev_messages.py:148
+#: webpay/base/dev_messages.py:149
 msgid "This payment key can only be used to simulate purchases."
 msgstr "Esta chave de pagamento só pode ser usada para simular compras."
 
-#: webpay/base/dev_messages.py:150
+#: webpay/base/dev_messages.py:151
+msgid "The configuration of the payment transaction failed."
+msgstr "A configuração da operação de pagamento falhou."
+
+#: webpay/base/dev_messages.py:153
 msgid "The purchase cannot be completed because the current transaction has already ended."
-msgstr ""
+msgstr "A compra não pode ser completada pois a transação já foi encerrada."
 
-#: webpay/base/dev_messages.py:152
+#: webpay/base/dev_messages.py:155
 msgid "No transaction ID could be found."
-msgstr ""
-
-#: webpay/base/dev_messages.py:154
-msgid "The system timed out while waiting for a transaction to start."
-msgstr ""
+msgstr "Não foi possível encontrar qualquer ID da transação."
 
 #: webpay/base/dev_messages.py:157
-msgid "The payment method or price point is not supported for this region or operator."
-msgstr ""
+msgid "The system timed out while waiting for a transaction to start."
+msgstr "O sistema expirou enquanto espera por uma operação para começar."
 
-#: webpay/base/dev_messages.py:159
+#: webpay/base/dev_messages.py:160
+msgid "The payment method or price point is not supported for this region or operator."
+msgstr "O método de pagamento ou faixa de preço não é suportado para esta região ou operador."
+
+#: webpay/base/dev_messages.py:162
 msgid "The user cancelled the payment."
-msgstr ""
+msgstr "O usuário cancelou o pagamento."
 
 #. L10n: First argument is the name of a key. Second
 #. argument is a number.
-#: webpay/base/dev_messages.py:166
+#: webpay/base/dev_messages.py:169
 msgid "The value for key \"{0}\" exceeds the maximum length of {1}"
 msgstr "O valor da chave \"{0}\" excede o tamanho limite de {1}"
 
-#: webpay/base/utils.py:47
+#: webpay/base/utils.py:56
 msgid "There was an error setting up the payment. Try again or contact the app if it persists."
 msgstr "Houve um erro ao salvar o pagamento. Tente mais uma vez ou contate o desenvolvedor se o problema persistir."
 
-#: webpay/base/utils.py:53
+#: webpay/base/utils.py:62
 msgid "There was an internal error processing the payment. Try again or contact Mozilla if it persists."
-msgstr ""
+msgstr "Ocorreu um erro interno ao processar o pagamento. Tente novamente ou contacte a Mozilla se o problema persistir."
 
 #: webpay/base/templates/403.html:4
 msgid "Not Allowed"
@@ -206,7 +211,7 @@ msgid "Please try again in a few moments."
 msgstr "Por favor, tente novamente daqui a alguns minutos."
 
 #. Web Pay is what we call the payment server/flow.
-#: webpay/base/templates/base.html:9 webpay/spa/templates/spa.html:8
+#: webpay/base/templates/base.html:9
 msgid "Web Pay"
 msgstr "Pagamento on-line"
 
@@ -220,7 +225,7 @@ msgstr "Seu PIN pode conter apenas dígitos."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
-msgstr ""
+msgstr "Você está conectado como um usuário diferente, você deve iniciar o pagamento novamente."
 
 #: webpay/base/templates/base.html:31
 msgid "Loading"
@@ -244,25 +249,25 @@ msgstr "Oopshellip;"
 
 #: webpay/base/templates/base.html:42
 msgid "This is taking longer than expected. Try again?"
-msgstr ""
+msgstr "Isto está demorando mais do que o esperado. Tente novamente?"
 
 #: webpay/base/templates/base.html:43
 msgid "Something went wrong. Try again?"
-msgstr ""
+msgstr "Algo deu errado. Tente de novo?"
 
 #: webpay/base/templates/base.html:44 webpay/pin/templates/pin/pin_is_locked.html:17
 msgid "OK"
 msgstr "OK"
 
+#: webpay/base/templates/base.html:48
+msgid "The transaction failed. You have not been charged for this purchase."
+msgstr "A transação falhou. Você não foi cobrado por esta compra."
+
 #: webpay/base/templates/error.html:9 webpay/pin/templates/pin/pin_is_locked.html:12
 msgid "Error"
 msgstr "Erro"
 
-#: webpay/pay/views.py:56
-msgid "Payments are temporarily disabled."
-msgstr "Os pagamentos foram desativados temporariamente."
-
-#: webpay/pay/views.py:191 webpay/pin/views.py:93
+#: webpay/pay/views.py:216 webpay/pin/views.py:93
 msgid "Enter Pin"
 msgstr "Inserir PIN"
 
@@ -308,7 +313,7 @@ msgstr "Fazer um pagamento de verdade"
 
 #: webpay/pay/templates/pay/wait-to-start.html:6 webpay/pay/templates/pay/wait-to-start.html:12
 msgid "Setting up payment&hellip;"
-msgstr ""
+msgstr "Configurando payment&hellip;"
 
 #: webpay/pin/forms.py:90
 msgid "You have already created a PIN."
@@ -322,7 +327,7 @@ msgstr "PIN incorreto."
 msgid "Pins do not match."
 msgstr "Os PINs inseridos não correspondem."
 
-#: webpay/pin/views.py:46
+#: webpay/pin/views.py:46 webpay/testing/views.py:25
 msgid "Create a Pin"
 msgstr "Criar um PIN"
 
@@ -340,7 +345,7 @@ msgstr "Redefinir PIN"
 
 #: webpay/pin/templates/pin/pin_form.html:13
 msgid "For testing only. Marketplace users <b>should not</b> use this site."
-msgstr ""
+msgstr "Para teste apenas. Usuários do Marketplace <b>não deve</b> usar este site."
 
 #. This is the same as the standard forgot
 #.                  password that most sites have.
@@ -367,3 +372,7 @@ msgstr "Tem certeza de que deseja redefinir seu PIN? Você deve identificar-se n
 #: webpay/pin/templates/pin/reset_start.html:20
 msgid "Reset"
 msgstr "Redefinir"
+
+#: webpay/provider/templates/provider/wait-to-finish.html:6 webpay/provider/templates/provider/wait-to-finish.html:12
+msgid "Verifying payment&hellip;"
+msgstr "Verificando pagamento&hellip;"
