--- a/locale/id/LC_MESSAGES/messages.po
+++ b/locale/id/LC_MESSAGES/messages.po
@@ -37,23 +37,23 @@ msgstr ""
 #: public/js/views/throbber.js:15 public/js/views/throbber.js:16
 #: templates/throbber.html:7
 msgid "Loading"
-msgstr "Memuat..."
+msgstr "Memuat"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
-msgstr "Memulai pembayaran…"
+msgid "Beginning payment"
+msgstr "Memulai pembayaran"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
-msgstr "Tersambung ke Persona…"
+msgstr "Tersambung ke Persona"
 
 #: webpay/base/templates/base.html:34
 msgid "Payment complete"
 msgstr "Pembayaran selesai"
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
-msgstr "Ups…"
+msgid "Oops"
+msgstr "Ups"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -154,11 +154,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
+msgid "Verifying payment"
 msgstr ""
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -199,5 +199,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
-msgstr "Menyiapkan pembayaran…"
+msgid "Setting up payment"
+msgstr "Menyiapkan pembayaran"
