--- a/locale/cs/LC_MESSAGES/messages.po
+++ b/locale/cs/LC_MESSAGES/messages.po
@@ -37,8 +37,8 @@ msgid "Loading"
 msgstr "Načítání"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
-msgstr "Začátek platby…"
+msgid "Beginning payment"
+msgstr "Začátek platby"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -49,8 +49,8 @@ msgid "Payment complete"
 msgstr "Platba byla dokončena"
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
-msgstr "Oops…"
+msgid "Oops"
+msgstr "Oops"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -150,11 +150,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
-msgstr "Ověřování platby…"
+msgid "Verifying payment"
+msgstr "Ověřování platby"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -195,5 +195,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
-msgstr "Nastavení platby…"
+msgid "Setting up payment"
+msgstr "Nastavení platby"
