--- a/locale/de/LC_MESSAGES/messages.po
+++ b/locale/de/LC_MESSAGES/messages.po
@@ -39,8 +39,8 @@ msgid "Loading"
 msgstr "Laden"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
-msgstr "Zahlung beginnt …"
+msgid "Beginning payment"
+msgstr "Zahlung beginnt"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -51,8 +51,8 @@ msgid "Payment complete"
 msgstr "Zahlung vollständig"
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
-msgstr "Hoppla…"
+msgid "Oops"
+msgstr "Hoppla"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -153,11 +153,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
-msgstr "Zahlung wird verifiziert…"
+msgid "Verifying payment"
+msgstr "Zahlung wird verifiziert"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -198,5 +198,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
-msgstr "Zahlung wird eingerichtet…"
+msgid "Setting up payment"
+msgstr "Zahlung wird eingerichtet"
