--- a/locale/ga_IE/LC_MESSAGES/messages.po
+++ b/locale/ga_IE/LC_MESSAGES/messages.po
@@ -37,8 +37,8 @@ msgid "Loading"
 msgstr "Ag Luchtú"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
-msgstr "Íocaíocht á tosú…"
+msgid "Beginning payment"
+msgstr "Íocaíocht á tosú"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -49,7 +49,7 @@ msgid "Payment complete"
 msgstr "Íocaíocht curtha i gcrích"
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
+msgid "Oops"
 msgstr ""
 
 #: public/js/lib/auth.js:65
@@ -152,11 +152,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
+msgid "Verifying payment"
 msgstr ""
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -196,5 +196,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
+msgid "Setting up payment"
 msgstr ""
