--- a/locale/ru/LC_MESSAGES/messages.po
+++ b/locale/ru/LC_MESSAGES/messages.po
@@ -39,8 +39,8 @@ msgid "Loading"
 msgstr "Загрузка"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
-msgstr "Начинаю платёж…"
+msgid "Beginning payment"
+msgstr "Начинаю платёж"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -51,8 +51,8 @@ msgid "Payment complete"
 msgstr "Платёж завершён"
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
-msgstr "Ой…"
+msgid "Oops"
+msgstr "Ой"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -153,11 +153,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
-msgstr "Верификация платежа…"
+msgid "Verifying payment"
+msgstr "Верификация платежа"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -198,5 +198,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
-msgstr "Настройка платежа…"
+msgid "Setting up payment"
+msgstr "Настройка платежа"
