--- a/locale/sq/LC_MESSAGES/messages.po
+++ b/locale/sq/LC_MESSAGES/messages.po
@@ -35,8 +35,8 @@ msgid "Loading"
 msgstr "Po ngarkohet"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
-msgstr "Po fillohet pagimi…"
+msgid "Beginning payment"
+msgstr "Po fillohet pagimi"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -47,8 +47,8 @@ msgid "Payment complete"
 msgstr "Pagim i plotësuar"
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
-msgstr "Oops…"
+msgid "Oops"
+msgstr "Oops"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -148,11 +148,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
-msgstr "Po verifikohet pagesa…"
+msgid "Verifying payment"
+msgstr "Po verifikohet pagesa"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -193,5 +193,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
-msgstr "Po përgatitet pagesa…"
+msgid "Setting up payment"
+msgstr "Po përgatitet pagesa"
