--- a/locale/sr/LC_MESSAGES/messages.po
+++ b/locale/sr/LC_MESSAGES/messages.po
@@ -38,8 +38,8 @@ msgid "Loading"
 msgstr "Учитавање"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
-msgstr "Започињање уплате…"
+msgid "Beginning payment"
+msgstr "Започињање уплате"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -50,8 +50,8 @@ msgid "Payment complete"
 msgstr "Плаћање извршено"
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
-msgstr "Упс…"
+msgid "Oops"
+msgstr "Упс"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -151,11 +151,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
-msgstr "Верификујемо плаћање…"
+msgid "Verifying payment"
+msgstr "Верификујемо плаћање"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -196,5 +196,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
-msgstr "Успостављање уплате…"
+msgid "Setting up payment"
+msgstr "Успостављање уплате"
