--- a/locale/th/LC_MESSAGES/messages.po
+++ b/locale/th/LC_MESSAGES/messages.po
@@ -36,7 +36,7 @@ msgid "Loading"
 msgstr ""
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
+msgid "Beginning payment"
 msgstr ""
 
 #: public/js/views/login.js:19
@@ -48,7 +48,7 @@ msgid "Payment complete"
 msgstr ""
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
+msgid "Oops"
 msgstr ""
 
 #: public/js/lib/auth.js:65
@@ -143,11 +143,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
+msgid "Verifying payment"
 msgstr ""
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -184,5 +184,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
+msgid "Setting up payment"
 msgstr ""
