--- a/locale/tr/LC_MESSAGES/messages.po
+++ b/locale/tr/LC_MESSAGES/messages.po
@@ -39,8 +39,8 @@ msgid "Loading"
 msgstr "Yükleniyor"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment…"
-msgstr "Ödeme başlatılıyor…"
+msgid "Beginning payment"
+msgstr "Ödeme başlatılıyor"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -51,8 +51,8 @@ msgid "Payment complete"
 msgstr "Ödeme tamamlandı"
 
 #: public/js/lib/auth.js:22
-msgid "Oops…"
-msgstr "Hata…"
+msgid "Oops"
+msgstr "Hata"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -152,11 +152,11 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment…"
-msgstr "Ödeme doğrulanıyor…"
+msgid "Verifying payment"
+msgstr "Ödeme doğrulanıyor"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
-msgid "Retrying..."
+msgid "Retrying"
 msgstr ""
 
 #: public/js/lib/auth.js:64
@@ -197,5 +197,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment…"
-msgstr "Ödeme ayarlanıyor…"
+msgid "Setting up payment"
+msgstr "Ödeme ayarlanıyor"
