--- a/locale/pt_BR/LC_MESSAGES/messages.po
+++ b/locale/pt_BR/LC_MESSAGES/messages.po
@@ -27,7 +27,7 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
+msgid "PIN can only contain digits."
 msgstr "Seu PIN pode conter apenas dígitos."
 
 #: webpay/base/templates/base.html:30
@@ -74,7 +74,7 @@ msgid "Error"
 msgstr "Erro"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
+msgid "Enter PIN"
 msgstr "Inserir PIN"
 
 #: public/js/views/login.js:25 templates/login.html:5
@@ -96,59 +96,59 @@ msgid "Continue"
 msgstr "Continuar"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
+msgid "Wrong PIN"
 msgstr "PIN incorreto."
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
+msgid "PINs do not match."
 msgstr "Os PINs inseridos não correspondem."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
+msgid "Create a PIN"
 msgstr "Criar um PIN"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
+msgid "Confirm PIN"
 msgstr "Confirmar PIN"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
+msgid "Reset PIN"
 msgstr "Redefinir PIN"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
+msgid "Forgot your PIN?"
 msgstr "Esqueceu seu PIN?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
 "Você inseriu um PIN incorreto muitas vezes. Sua conta está bloqueada. Por "
 "favor, tente efetuar uma aquisição novamente daqui a 5 minutos."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
+msgid "Your PIN was locked"
 msgstr "Seu PIN está bloqueado"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
 "Seu PIN foi bloqueado porque você inseriu um PIN incorreto muitas vezes. "
 "Você pode continuar e tentar inserir seu PIN novamente ou redefinir seu PIN."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
 "Tem certeza de que deseja redefinir seu PIN? Você deve identificar-se no "
 "Persona para redefinir seu PIN."
@@ -182,7 +182,7 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
+msgid "Create PIN"
 msgstr "Criar um PIN"
 
 #: public/js/views/error.js:45
