--- a/locale/cs/LC_MESSAGES/messages.po
+++ b/locale/cs/LC_MESSAGES/messages.po
@@ -24,7 +24,7 @@ msgid "Cancel"
 msgstr "Zrušit"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
+msgid "PIN can only contain digits."
 msgstr "PIN může obsahovat pouze čísla."
 
 #: webpay/base/templates/base.html:30
@@ -69,7 +69,7 @@ msgid "Error"
 msgstr "Chyba"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
+msgid "Enter PIN"
 msgstr "Vložte PIN"
 
 #: public/js/views/login.js:25 templates/login.html:5
@@ -91,59 +91,59 @@ msgid "Continue"
 msgstr "Pokračovat"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
-msgstr "Špatný pin"
+msgid "Wrong PIN"
+msgstr "Špatný PIN"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
-msgstr "Piny si neodpovídají."
+msgid "PINs do not match."
+msgstr "PINy si neodpovídají."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
+msgid "Create a PIN"
 msgstr "Vytvoření PINu"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
+msgid "Confirm PIN"
 msgstr "Potvrzení PINu"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
+msgid "Reset PIN"
 msgstr "Obnova PINu"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
+msgid "Forgot your PIN?"
 msgstr "Zapomněl(a) jste svůj PIN?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
 "Zadal(a) jste opakovaně špatný kód PIN. Váš účet je nyní zablokován. Zkuste "
 "znovu svůj nákup za 5 minut."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
+msgid "Your PIN was locked"
 msgstr "PIN byl uzamčen"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
 "PIN byl zablokován, protože jste jej vložil(a) opakovaně chybně. Můžete "
 "pokračovat a zkusit jej zadat znovu či PIN obnovit."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
 "Jste si jist(a), že chcete obnovit svůj PIN? Pro obnovu svého PINu se musíte "
 "přihlásit pomocí Persona."
@@ -177,7 +177,7 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
+msgid "Create PIN"
 msgstr "Vytvoření PINu"
 
 #: public/js/views/error.js:45
