--- a/locale/da/LC_MESSAGES/messages.po
+++ b/locale/da/LC_MESSAGES/messages.po
@@ -23,8 +23,8 @@ msgid "Cancel"
 msgstr "Annuller"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
-msgstr "Pinkoden kan kun indholde tal."
+msgid "PIN can only contain digits."
+msgstr "PINkoden kan kun indholde tal."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
@@ -68,8 +68,8 @@ msgid "Error"
 msgstr "Fejl"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
-msgstr "Indtast pinkode"
+msgid "Enter PIN"
+msgstr "Indtast PINkode"
 
 #: public/js/views/login.js:25 templates/login.html:5
 msgid "Sign In"
@@ -90,63 +90,63 @@ msgid "Continue"
 msgstr "Fortsæt"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
-msgstr "Forkert pinkode"
+msgid "Wrong PIN"
+msgstr "Forkert PINkode"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
-msgstr "Pinkoder matcher ikke."
+msgid "PINs do not match."
+msgstr "PINkoder matcher ikke."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
-msgstr "Opret en pinkode"
+msgid "Create a PIN"
+msgstr "Opret en PINkode"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
-msgstr "Bekræft pinkode"
+msgid "Confirm PIN"
+msgstr "Bekræft PINkode"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
-msgstr "Nulstil pinkode"
+msgid "Reset PIN"
+msgstr "Nulstil PINkode"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
-msgstr "Glemt din pinkode?"
+msgid "Forgot your PIN?"
+msgstr "Glemt din PINkode?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
-"Du indtastede den forkerte pinkode for mange gange. Din konto er spærret. "
+"Du indtastede den forkerte PINkode for mange gange. Din konto er spærret. "
 "Prøv at foretage dit køb igen om 5 minutter."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
-msgstr "Din pinkode er blevet spærret"
+msgid "Your PIN was locked"
+msgstr "Din PINkode er blevet spærret"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
-"Din pinkode blev spærret fordi du indtastede den forkert for mange gange. Du "
-"kan fortsætte og prøve at indtaste din pinkode igen eller nulstille din "
-"pinkode."
+"Din PINkode blev spærret fordi du indtastede den forkert for mange gange. Du "
+"kan fortsætte og prøve at indtaste din PINkode igen eller nulstille din "
+"PINkode."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
-"Er du sikker på, at du vil nulstille din pinkode? Du skal logge ind med "
-"Persona for at nulstille din pinkode."
+"Er du sikker på, at du vil nulstille din PINkode? Du skal logge ind med "
+"Persona for at nulstille din PINkode."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
@@ -177,8 +177,8 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
-msgstr "Opret en pinkode"
+msgid "Create PIN"
+msgstr "Opret en PINkode"
 
 #: public/js/views/error.js:45
 #, fuzzy
@@ -188,7 +188,7 @@ msgstr "Noget gik galt!"
 #: public/js/views/reset-start.js:29
 #, fuzzy
 msgid "Reset your PIN?"
-msgstr "Nulstil pinkode"
+msgstr "Nulstil PINkode"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
