--- a/locale/dbg/LC_MESSAGES/messages.po
+++ b/locale/dbg/LC_MESSAGES/messages.po
@@ -22,7 +22,7 @@ msgid "Cancel"
 msgstr "Ƈȧƞƈḗŀ"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
+msgid "PIN can only contain digits."
 msgstr "Ƥīƞ ƈȧƞ ǿƞŀẏ ƈǿƞŧȧīƞ ḓīɠīŧş."
 
 #: webpay/base/templates/base.html:30
@@ -67,7 +67,7 @@ msgid "Error"
 msgstr "Ḗřřǿř"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
+msgid "Enter PIN"
 msgstr "Ḗƞŧḗř Ƥīƞ"
 
 #: public/js/views/login.js:25 templates/login.html:5
@@ -89,59 +89,59 @@ msgid "Continue"
 msgstr "Ƈǿƞŧīƞŭḗ"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
+msgid "Wrong PIN"
 msgstr "Ẇřǿƞɠ ƥīƞ"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
+msgid "PINs do not match."
 msgstr "Ƥīƞş ḓǿ ƞǿŧ ḿȧŧƈħ."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
+msgid "Create a PIN"
 msgstr "Ƈřḗȧŧḗ ȧ Ƥīƞ"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
+msgid "Confirm PIN"
 msgstr "Ƈǿƞƒīřḿ Ƥīƞ"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
+msgid "Reset PIN"
 msgstr "Řḗşḗŧ Ƥīƞ"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
+msgid "Forgot your PIN?"
 msgstr "Ƒǿřɠǿŧ ẏǿŭř ƥīƞ?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
 "Ẏǿŭ ḗƞŧḗřḗḓ ŧħḗ ẇřǿƞɠ ƥīƞ ŧǿǿ ḿȧƞẏ ŧīḿḗş. Ẏǿŭř ȧƈƈǿŭƞŧ īş ŀǿƈķḗḓ. Ƥŀḗȧşḗ ŧřẏ "
 "ẏǿŭř ƥŭřƈħȧşḗ ȧɠȧīƞ īƞ 5 ḿīƞŭŧḗş."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
+msgid "Your PIN was locked"
 msgstr "Ẏǿŭř Ƥīƞ ẇȧş ŀǿƈķḗḓ"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
 "Ẏǿŭř ƥīƞ ẇȧş ŀǿƈķḗḓ ƀḗƈȧŭşḗ ẏǿŭ ḗƞŧḗřḗḓ īŧ īƞƈǿřřḗƈŧŀẏ ŧǿǿ ḿȧƞẏ ŧīḿḗş. Ẏǿŭ "
 "ƈȧƞ ƈǿƞŧīƞŭḗ ȧƞḓ ŧřẏ ḗƞŧḗřīƞɠ ẏǿŭř ƥīƞ ȧɠȧīƞ ǿř řḗşḗŧ ẏǿŭř ƥīƞ."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
 "Ȧřḗ ẏǿŭ şŭřḗ ẏǿŭ ẇȧƞŧ ŧǿ řḗşḗŧ ẏǿŭř ƥīƞ? Ẏǿŭ ḿŭşŧ şīɠƞ īƞ ŧǿ Ƥḗřşǿƞȧ ŧǿ "
 "řḗşḗŧ ẏǿŭř ƥīƞ."
@@ -175,7 +175,7 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
+msgid "Create PIN"
 msgstr "Ƈřḗȧŧḗ ȧ Ƥīƞ"
 
 #: public/js/views/error.js:45
