--- a/locale/el/LC_MESSAGES/messages.po
+++ b/locale/el/LC_MESSAGES/messages.po
@@ -23,8 +23,8 @@ msgid "Cancel"
 msgstr "Ακύρωση"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
-msgstr "Το Pin μπορεί να περιέχει μόνο ψηφία."
+msgid "PIN can only contain digits."
+msgstr "Το PIN μπορεί να περιέχει μόνο ψηφία."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
@@ -68,8 +68,8 @@ msgid "Error"
 msgstr "Σφάλμα"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
-msgstr "Εισάγετε Pin"
+msgid "Enter PIN"
+msgstr "Εισάγετε PIN"
 
 #: public/js/views/login.js:25 templates/login.html:5
 msgid "Sign In"
@@ -90,62 +90,62 @@ msgid "Continue"
 msgstr "Συνέχεια"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
-msgstr "Λάθος pin"
+msgid "Wrong PIN"
+msgstr "Λάθος PIN"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
-msgstr "Τα pins δεν ταιριάζουν."
+msgid "PINs do not match."
+msgstr "Τα PINs δεν ταιριάζουν."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
-msgstr "Δημιουργήστε ένα Pin"
+msgid "Create a PIN"
+msgstr "Δημιουργήστε ένα PIN"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
-msgstr "Επιβεβαίωση Pin"
+msgid "Confirm PIN"
+msgstr "Επιβεβαίωση PIN"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
-msgstr "Επαναφορά Pin"
+msgid "Reset PIN"
+msgstr "Επαναφορά PIN"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
-msgstr "Ξεχάσατε το pin σας;"
+msgid "Forgot your PIN?"
+msgstr "Ξεχάσατε το PIN σας;"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
-"Εισάγατε λάθος pin πάρα πολλές φορές. Ο λογαριασμός σας κλειδώθηκε. Παρακαλώ "
+"Εισάγατε λάθος PIN πάρα πολλές φορές. Ο λογαριασμός σας κλειδώθηκε. Παρακαλώ "
 "δοκιμάστε την αγορά ξανά σε 5 λεπτά."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
-msgstr "Το Pin σας κλειδώθηκε"
+msgid "Your PIN was locked"
+msgstr "Το PIN σας κλειδώθηκε"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
-"Το pin σας κλειδώθηκε επειδή το εισάγατε λάθος πολλές φορές. Μπορείτε να "
-"συνεχίσετε και να δοκιμάσετε ξανά να είσάγετε το pin ή να το επαναφέρετε."
+"Το PIN σας κλειδώθηκε επειδή το εισάγατε λάθος πολλές φορές. Μπορείτε να "
+"συνεχίσετε και να δοκιμάσετε ξανά να είσάγετε το PIN ή να το επαναφέρετε."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
-"Είστε σίγουροι πως θέλετε να επαναφέρετε το pin σας; Πρέπει να συνδεθείτε "
-"στο Persona για να επαναφέρετε το pin."
+"Είστε σίγουροι πως θέλετε να επαναφέρετε το PIN σας; Πρέπει να συνδεθείτε "
+"στο Persona για να επαναφέρετε το PIN."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
@@ -176,8 +176,8 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
-msgstr "Δημιουργήστε ένα Pin"
+msgid "Create PIN"
+msgstr "Δημιουργήστε ένα PIN"
 
 #: public/js/views/error.js:45
 #, fuzzy
@@ -187,7 +187,7 @@ msgstr "Συνέβη κάποιο σφάλμα!"
 #: public/js/views/reset-start.js:29
 #, fuzzy
 msgid "Reset your PIN?"
-msgstr "Επαναφορά Pin"
+msgstr "Επαναφορά PIN"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
