--- a/locale/en_US/LC_MESSAGES/messages.po
+++ b/locale/en_US/LC_MESSAGES/messages.po
@@ -23,8 +23,8 @@ msgid "Cancel"
 msgstr "Cancel"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
-msgstr "Pin can only contain digits."
+msgid "PIN can only contain digits."
+msgstr "PIN can only contain digits."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
@@ -68,8 +68,8 @@ msgid "Error"
 msgstr "Error"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
-msgstr "Enter Pin"
+msgid "Enter PIN"
+msgstr "Enter PIN"
 
 #: public/js/views/login.js:25 templates/login.html:5
 msgid "Sign In"
@@ -90,62 +90,62 @@ msgid "Continue"
 msgstr "Continue"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
-msgstr "Wrong pin"
+msgid "Wrong PIN"
+msgstr "Wrong PIN"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
-msgstr "Pins do not match."
+msgid "PINs do not match."
+msgstr "PINs do not match."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
-msgstr "Create a Pin"
+msgid "Create a PIN"
+msgstr "Create a PIN"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
-msgstr "Confirm Pin"
+msgid "Confirm PIN"
+msgstr "Confirm PIN"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
-msgstr "Reset Pin"
+msgid "Reset PIN"
+msgstr "Reset PIN"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
-msgstr "Forgot your pin?"
+msgid "Forgot your PIN?"
+msgstr "Forgot your PIN?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
-msgstr "Your Pin was locked"
+msgid "Your PIN was locked"
+msgstr "Your PIN was locked"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
@@ -176,8 +176,8 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
-msgstr "Create a Pin"
+msgid "Create PIN"
+msgstr "Create a PIN"
 
 #: public/js/views/error.js:45
 #, fuzzy
@@ -187,7 +187,7 @@ msgstr "Something went wrong!"
 #: public/js/views/reset-start.js:29
 #, fuzzy
 msgid "Reset your PIN?"
-msgstr "Reset Pin"
+msgstr "Reset PIN"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
