--- a/locale/eu/LC_MESSAGES/messages.po
+++ b/locale/eu/LC_MESSAGES/messages.po
@@ -25,7 +25,7 @@ msgid "Cancel"
 msgstr "Utzi"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
+msgid "PIN can only contain digits."
 msgstr "PIN kodeak digituak soilik izan ditzake."
 
 #: webpay/base/templates/base.html:30
@@ -72,7 +72,7 @@ msgid "Error"
 msgstr "Errorea"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
+msgid "Enter PIN"
 msgstr "Idatzi PINa"
 
 #: public/js/views/login.js:25 templates/login.html:5
@@ -94,59 +94,59 @@ msgid "Continue"
 msgstr "Jarraitu"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
+msgid "Wrong PIN"
 msgstr "Okerreko PINa"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
+msgid "PINs do not match."
 msgstr "PINak ez datoz bat."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
+msgid "Create a PIN"
 msgstr "Sortu PINa"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
+msgid "Confirm PIN"
 msgstr "Berretsi PINa"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
+msgid "Reset PIN"
 msgstr "Berrezarri PINa"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
+msgid "Forgot your PIN?"
 msgstr "PINa ahaztu duzu?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
 "Okerreko PIN kodea gehiegitan idatzi duzu. Zure kontua blokeatu da. Saiatu "
 "berriro erosten 5 minutu barru."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
+msgid "Your PIN was locked"
 msgstr "Zure PINa blokeatu da"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
 "Zure PINa blokeatu da, gehiegitan oker idatzi duzulako. Jarraitu aurrera eta "
 "saiatu PINa berriro idazten, edo berrezarri PINa."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
 "Ziur PINa berrezarri nahi duzula? Persona-rekin saioa hasi behar duzu PINa "
 "berrezartzeko."
@@ -180,7 +180,7 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
+msgid "Create PIN"
 msgstr "Sortu PINa"
 
 #: public/js/views/error.js:45
