--- a/locale/hr/LC_MESSAGES/messages.po
+++ b/locale/hr/LC_MESSAGES/messages.po
@@ -24,7 +24,7 @@ msgid "Cancel"
 msgstr "Otkaži"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
+msgid "PIN can only contain digits."
 msgstr "PIN smije sadržavati isključivo znamenke."
 
 #: webpay/base/templates/base.html:30
@@ -69,7 +69,7 @@ msgid "Error"
 msgstr "Greška"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
+msgid "Enter PIN"
 msgstr "Upišite PIN"
 
 #: public/js/views/login.js:25 templates/login.html:5
@@ -91,59 +91,59 @@ msgid "Continue"
 msgstr "Nastavi"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
+msgid "Wrong PIN"
 msgstr "Netočan PIN"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
+msgid "PINs do not match."
 msgstr "PIN-ovi se ne podudaraju."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
+msgid "Create a PIN"
 msgstr "Stvorite PIN"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
+msgid "Confirm PIN"
 msgstr "Potvrdite PIN"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
+msgid "Reset PIN"
 msgstr "Resetiraj PIN"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
+msgid "Forgot your PIN?"
 msgstr "Zaboravili ste PIN?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
 "Upisali ste netočan PIN previše puta. Vaš korisnički račun je zaključan. "
 "Pokušajte ponoviti kupovinu za 5 minuta."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
+msgid "Your PIN was locked"
 msgstr "Vaš PIN je bio zaključan"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
 "Vaš PIN je bio zaključan jer ste ga netočno upisali previše puta. Možete "
 "nastaviti ponovnim upisivanjem PIN-a ili resetiranjem PIN-a."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
 "Jeste li sigurni da želite resetirati vaš PIN? Da biste ga mogli resetirati "
 "morate biti prijavljeni s Personom."
@@ -176,7 +176,7 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
+msgid "Create PIN"
 msgstr "Stvorite PIN"
 
 #: public/js/views/error.js:45
