--- a/locale/pa/LC_MESSAGES/messages.po
+++ b/locale/pa/LC_MESSAGES/messages.po
@@ -24,8 +24,8 @@ msgid "Cancel"
 msgstr "ਰੱਦ"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
-msgstr "Pin ਅੰਕ ਹੀ ਹੋ ਸਕਦਾ ਹੈ।"
+msgid "PIN can only contain digits."
+msgstr "PIN ਅੰਕ ਹੀ ਹੋ ਸਕਦਾ ਹੈ।"
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
@@ -69,7 +69,7 @@ msgid "Error"
 msgstr "ਗਲਤੀ"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
+msgid "Enter PIN"
 msgstr "ਪਿੰਨ ਭਰੋ"
 
 #: public/js/views/login.js:25 templates/login.html:5
@@ -91,59 +91,59 @@ msgid "Continue"
 msgstr "ਜਾਰੀ"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
+msgid "Wrong PIN"
 msgstr "ਗਲਤ ਪਿੰਨ"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
+msgid "PINs do not match."
 msgstr "ਪਿੰਨ ਮੇਲ ਨਹੀ ਖਾਦਾ।"
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
+msgid "Create a PIN"
 msgstr "ਪਿੰਨ ਬਣਾਉ"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
+msgid "Confirm PIN"
 msgstr "ਪਿੰਨ ਦੀ ਪੁਸ਼ਟੀ"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
+msgid "Reset PIN"
 msgstr "ਰਿਸੇਟ ਪਿੰਨ"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
+msgid "Forgot your PIN?"
 msgstr "ਤੁਸੀ ਆਪਣਾ ਪਿੰਨ ਭੁੱਲ ਗਏ ਹੋ"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
 "ਤੁਹਾਨੂੰ ਗਲਤ ਪਿੰਨ ਬਹੁਤ ਵਾਰ ਦਿੱਤਾ ਹੈ| ਤੁਹਾਡੇ ਖਾਤਾ ਲਾਕ ਹੋ ਗਿਆ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ 5 ਮਿੰਟ ਵਿੱਚ ਮੁੜ ਕੇ "
 "ਆਪਣੀ ਖਰੀਦ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰੋ ਜੀ|"
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
+msgid "Your PIN was locked"
 msgstr "ਤੁਹਾਡੇ ਪਿੰਨ ਲਾਕ ਹੋ ਗਿਆ ਹੈ"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
 "ਤੁਹਾਡੇ ਪਿੰਨ ਲਾਕ ਹੋ ਗਿਆ ਹੈ ਕਿਉਕਿ ਤੁਸੀ ਇਸਨੂੰ ਕਈ ਵਾਰ ਗਲਤ ਭਰਿਆ ਹੈ। ਤੁਸੀ ਜਾਰੀ ਰੱਖ ਸਕਦੇ ਹੋ ਅਤੇ "
 "ਤੁਹਾਡੇ ਪਿੰਨ ਦੇ ਕੇ ਕੋਸਿਸ ਕਰੋ ਜਾ ਪਿੰਨ ਫਿਰ ਤੋ ਰੀਸੈਟ ਕਰ ਕੇ।"
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
 "ਤੁਹਾਨੂੰ ਯਕੀਨ ਹੈ ਕਿ ਤੁਸੀ ਪਿੰਨ ਰਿਸੈੱਟ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ? ਤੁਹਾਨੂੰ ਆਪਣੇ ਪਿੰਨ ਰੀਸੈੱਟ ਕਰਨ ਲਈ Persona ਨੂੰ "
 "ਵਿੱਚ ਲਾਗਿਨ ਕਰਨਾ ਲਾਜ਼ਮੀ ਹੈ।"
@@ -177,7 +177,7 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
+msgid "Create PIN"
 msgstr "ਪਿੰਨ ਬਣਾਉ"
 
 #: public/js/views/error.js:45
