--- a/locale/sq/LC_MESSAGES/messages.po
+++ b/locale/sq/LC_MESSAGES/messages.po
@@ -22,8 +22,8 @@ msgid "Cancel"
 msgstr "Anuloje"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
-msgstr "Pin-i mund të përmbajë vetëm shifra."
+msgid "PIN can only contain digits."
+msgstr "PIN-i mund të përmbajë vetëm shifra."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
@@ -67,8 +67,8 @@ msgid "Error"
 msgstr "Gabim"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
-msgstr "Jepni Pin-in"
+msgid "Enter PIN"
+msgstr "Jepni PIN-in"
 
 #: public/js/views/login.js:25 templates/login.html:5
 msgid "Sign In"
@@ -89,62 +89,62 @@ msgid "Continue"
 msgstr "Vazhdo"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
-msgstr "Pin i gabuar"
+msgid "Wrong PIN"
+msgstr "PIN i gabuar"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
-msgstr "Pin-et nuk përputhen."
+msgid "PINs do not match."
+msgstr "PIN-et nuk përputhen."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
-msgstr "Krijoni një Pin"
+msgid "Create a PIN"
+msgstr "Krijoni një PIN"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
-msgstr "Konfirmoni Pin-in"
+msgid "Confirm PIN"
+msgstr "Konfirmoni PIN-in"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
-msgstr "Ricaktoni Pin-in"
+msgid "Reset PIN"
+msgstr "Ricaktoni PIN-in"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
-msgstr "Harruat pin-in tuaj?"
+msgid "Forgot your PIN?"
+msgstr "Harruat PIN-in tuaj?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
-"Dhatë pin-in e gabuar shumë herë. Llogaria juaj është bllokuar. Ju lutemi, "
+"Dhatë PIN-in e gabuar shumë herë. Llogaria juaj është bllokuar. Ju lutemi, "
 "riprovojeni blerjen pas 5 minutash."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
-msgstr "Pin-i juaj është bllokuar"
+msgid "Your PIN was locked"
+msgstr "PIN-i juaj është bllokuar"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
-"Pin-i juaj u bllokua ngaqë e dhatë pasaktësisht shumë herë. Mund të vazhdoni "
-"dhe të provoni ta jepni sërish pin-in tuaj ose ta ricaktoni atë."
+"PIN-i juaj u bllokua ngaqë e dhatë pasaktësisht shumë herë. Mund të vazhdoni "
+"dhe të provoni ta jepni sërish PIN-in tuaj ose ta ricaktoni atë."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
-"Jeni i sigurt se doni të ricaktoni pin-in tuaj? Duhet të keni bërë hyrjen te "
-"Persona që të ricaktoni pin-in tuaj."
+"Jeni i sigurt se doni të ricaktoni PIN-in tuaj? Duhet të keni bërë hyrjen te "
+"Persona që të ricaktoni PIN-in tuaj."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
@@ -175,8 +175,8 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
-msgstr "Krijoni një Pin"
+msgid "Create PIN"
+msgstr "Krijoni një PIN"
 
 #: public/js/views/error.js:45
 #, fuzzy
@@ -186,7 +186,7 @@ msgstr "Diçka shkoi ters!"
 #: public/js/views/reset-start.js:29
 #, fuzzy
 msgid "Reset your PIN?"
-msgstr "Ricaktoni Pin-in"
+msgstr "Ricaktoni PIN-in"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
