--- a/locale/templates/LC_MESSAGES/messages.pot
+++ b/locale/templates/LC_MESSAGES/messages.pot
@@ -22,7 +22,7 @@ msgid "Cancel"
 msgstr ""
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
+msgid "PIN can only contain digits."
 msgstr ""
 
 #: webpay/base/templates/base.html:30
@@ -70,7 +70,7 @@ msgstr ""
 
 #: public/js/views/enter-pin.js:96
 #: public/js/views/enter-pin.js:100
-msgid "Enter Pin"
+msgid "Enter PIN"
 msgstr ""
 
 #: public/js/views/login.js:25
@@ -95,22 +95,22 @@ msgid "Continue"
 msgstr ""
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
+msgid "Wrong PIN"
 msgstr ""
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
+msgid "PINs do not match."
 msgstr ""
 
 #: webpay/pin/views.py:46
 #: webpay/testing/views.py:25
-msgid "Create a Pin"
+msgid "Create a PIN"
 msgstr ""
 
 #: webpay/pin/views.py:68
 #: webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
+msgid "Confirm PIN"
 msgstr ""
 
 #: webpay/pin/views.py:131
@@ -119,36 +119,36 @@ msgstr ""
 #: public/js/views/reset-pin.js:65
 #: public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
+msgid "Reset PIN"
 msgstr ""
 
 #: templates/pin-form.html:18
 #: templates/reset-start.html:6
 #. This is the same as the standard forgot
 #. password that most sites have.
-msgid "Forgot your pin?"
+msgid "Forgot your PIN?"
 msgstr ""
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please "
+"You entered the wrong PIN too many times. Your account is locked. Please "
 "try your purchase again in 5 minutes."
 msgstr ""
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
+msgid "Your PIN was locked"
 msgstr ""
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
@@ -183,7 +183,7 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114
 #: public/js/views/create-pin.js:116
-msgid "Create Pin"
+msgid "Create PIN"
 msgstr ""
 
 #: public/js/views/error.js:45
