--- a/locale/tr/LC_MESSAGES/messages.po
+++ b/locale/tr/LC_MESSAGES/messages.po
@@ -24,7 +24,7 @@ msgid "Cancel"
 msgstr "İptal"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
+msgid "PIN can only contain digits."
 msgstr "PIN sadece rakamlardan oluşabilir."
 
 #: webpay/base/templates/base.html:30
@@ -71,7 +71,7 @@ msgid "Error"
 msgstr "Hata"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
+msgid "Enter PIN"
 msgstr "PIN'i girin"
 
 #: public/js/views/login.js:25 templates/login.html:5
@@ -93,59 +93,59 @@ msgid "Continue"
 msgstr "Devam et"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
+msgid "Wrong PIN"
 msgstr "Yanlış PIN"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
+msgid "PINs do not match."
 msgstr "PIN'ler eşleşmiyor."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
+msgid "Create a PIN"
 msgstr "PIN oluşturun"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
+msgid "Confirm PIN"
 msgstr "PIN'i doğrulayın"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
+msgid "Reset PIN"
 msgstr "PIN'i sıfırla"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
+msgid "Forgot your PIN?"
 msgstr "PIN'inizi mi unuttunuz?"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
 "Çok fazla yanlış PIN girdiniz. Hesabınız kilitlendi. Lütfen 5 dakika sonra "
 "tekrar satın almayı deneyin."
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
+msgid "Your PIN was locked"
 msgstr "PIN'iniz kilitlendi"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
 msgstr ""
 "Çok fazla yanlış deneme yaptığınız için PIN'iniz kilitlendi. Devam ederek "
 "PIN'inizi tekrar girmeyi deneyebilir veya PIN'inizi sıfırlayabilirsiniz."
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
 msgstr ""
 "PIN'inizi sıfırlamak istediğinizden emin misiniz? PIN'inizi sıfırlamak için "
 "Persona'da oturum açmalısınız."
@@ -179,7 +179,7 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
+msgid "Create PIN"
 msgstr "PIN oluşturun"
 
 #: public/js/views/error.js:45
