--- a/locale/zh_TW/LC_MESSAGES/messages.po
+++ b/locale/zh_TW/LC_MESSAGES/messages.po
@@ -24,8 +24,8 @@ msgid "Cancel"
 msgstr "取消"
 
 #: public/js/lib/pin-widget.js:58
-msgid "Pin can only contain digits."
-msgstr "Pin 碼只能為數字。"
+msgid "PIN can only contain digits."
+msgstr "PIN 碼只能為數字。"
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
@@ -69,8 +69,8 @@ msgid "Error"
 msgstr "錯誤"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
-msgid "Enter Pin"
-msgstr "輸入 Pin 碼"
+msgid "Enter PIN"
+msgstr "輸入 PIN 碼"
 
 #: public/js/views/login.js:25 templates/login.html:5
 msgid "Sign In"
@@ -91,56 +91,56 @@ msgid "Continue"
 msgstr "繼續"
 
 #: public/js/views/enter-pin.js:73
-msgid "Wrong pin"
-msgstr "Pin 碼錯誤"
+msgid "Wrong PIN"
+msgstr "PIN 碼錯誤"
 
 #: public/js/views/create-pin.js:48
-msgid "Pins do not match."
-msgstr "輸入的 Pin 碼不同。"
+msgid "PINs do not match."
+msgstr "輸入的 PIN 碼不同。"
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
-msgid "Create a Pin"
-msgstr "建立 Pin 碼"
+msgid "Create a PIN"
+msgstr "建立 PIN 碼"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
-msgid "Confirm Pin"
-msgstr "確認 Pin 碼"
+msgid "Confirm PIN"
+msgstr "確認 PIN 碼"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
-msgid "Reset Pin"
-msgstr "重設 Pin 碼"
+msgid "Reset PIN"
+msgstr "重設 PIN 碼"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-msgid "Forgot your pin?"
-msgstr "忘記您的 Pin 碼？"
+msgid "Forgot your PIN?"
+msgstr "忘記您的 PIN 碼？"
 
 #: public/js/views/locked.js:24
 msgid ""
-"You entered the wrong pin too many times. Your account is locked. Please try "
+"You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
-msgstr "您輸入了錯誤的 Pin 碼太多次，帳號已被鎖定。請等五分鐘後再嘗試購買。"
+msgstr "您輸入了錯誤的 PIN 碼太多次，帳號已被鎖定。請等五分鐘後再嘗試購買。"
 
 #: templates/was-locked.html:6
-msgid "Your Pin was locked"
-msgstr "您的 Pin 碼已被鎖定"
+msgid "Your PIN was locked"
+msgstr "您的 PIN 碼已被鎖定"
 
 #: templates/was-locked.html:7
 msgid ""
-"Your pin was locked because you entered it incorrectly too many times. You "
-"can continue and try entering your pin again or reset your pin."
-msgstr "您輸錯太多次 Pin 碼，已被鎖定。您可以繼續嘗試輸入，或重設您的 Pin 碼。"
+"Your PIN was locked because you entered it incorrectly too many times. You "
+"can continue and try entering your PIN again or reset your PIN."
+msgstr "您輸錯太多次 PIN 碼，已被鎖定。您可以繼續嘗試輸入，或重設您的 PIN 碼。"
 
 #: templates/reset-start.html:7
 msgid ""
-"Are you sure you want to reset your pin? You must sign in to Persona to "
-"reset your pin."
-msgstr "您確定要重設 Pin 碼嗎？必須登入至 Persona 才能重設您的 Pin 碼。"
+"Are you sure you want to reset your PIN? You must sign in to Persona to "
+"reset your PIN."
+msgstr "您確定要重設 PIN 碼嗎？必須登入至 Persona 才能重設您的 PIN 碼。"
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
@@ -171,8 +171,8 @@ msgstr ""
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #, fuzzy
-msgid "Create Pin"
-msgstr "建立 Pin 碼"
+msgid "Create PIN"
+msgstr "建立 PIN 碼"
 
 #: public/js/views/error.js:45
 #, fuzzy
@@ -182,7 +182,7 @@ msgstr "有些東西不對勁！"
 #: public/js/views/reset-start.js:29
 #, fuzzy
 msgid "Reset your PIN?"
-msgstr "重設 Pin 碼"
+msgstr "重設 PIN 碼"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
